# CrowPanel-3.5-HMI-ESP32-Display-480x320

./: readme.md
Eagle_SCH&PCB/: CrowPanel ESP32 Display-3.5-V2.2-20240704.brd  CrowPanel ESP32 Display-3.5-V2.2-20240704.sch
example/: readme.md
example/Arduino/Arduino_Tutorial_35/LVGL_Arduino3.5/: LVGL_Arduino3.5.ino
example/Arduino/Arduino_Tutorial_35/libraries/: Changes-2.0vs2.2.txt  readme.md
example/Arduino/Arduino_Tutorial_35/libraries/v2.0 lib/: UI-3.5-BLUE.rar  lv_conf.h
example/Arduino/Arduino_Tutorial_35/libraries/v2.0 lib/TFT_eSPI/: User_Setup.h
example/Arduino/Arduino_Tutorial_35/libraries/v2.0 lib/UI/: ui.c
example/Arduino/Arduino_Tutorial_35/squareline_example/: squareline_example.ino
example/ESP_IDF/CrowPanel_ESP32_3.5/: CMakeLists.txt  sdkconfig  sdkconfig.old
example/ESP_IDF/CrowPanel_ESP32_3.5/main/: CMakeLists.txt  CrowPanel_ESP32_3.5.cpp
example/Esphome/: 3.5-ESPHome.yaml
example/Micropython/DHT20&LED/: CrowPanel_ESP32_3.5.py  DHT20.py  ui.py  ui_images.py
example/Micropython/ESP32-3.5-MicroPython-Code/GPIO_Examples/: button_led.py  sd.py  spk.py  tem.py  uart.py
example/PlatformIO/CrowPanel_ESP32_3.5/: platformio.ini
example/PlatformIO/CrowPanel_ESP32_3.5/src/: main.cpp
factory_sourecode/HMI-3.5/LVGL_Arduino3.5RTP-Hor/: LVGL_Arduino3.5RTP-Hor.ino
